# zeroclaw

./: Cargo.toml  Dockerfile
crates/zeroclaw-core/: Cargo.toml
crates/zeroclaw-core/src/: dispatcher.rs  lib.rs  provider.rs
crates/zeroclaw-edge/: Cargo.toml
crates/zeroclaw-edge-native-delegate/: Cargo.toml
crates/zeroclaw-edge-native-delegate/src/: main.rs
crates/zeroclaw-edge-worker/: Cargo.toml  wrangler.toml
crates/zeroclaw-edge-worker/src/: lib.rs
crates/zeroclaw-edge/src/: canary.rs  canary_cron.rs  canary_live.rs  canary_metrics.rs  canary_orchestrator.rs  canary_schedule.rs  canary_tick.rs  cloudflare_cli.rs  cloudflare_deploy_api.rs  delegate_http.rs  lib.rs  memory_http.rs
dev/: README.md  ci.sh  docker-compose.ci.yml
docs/maintainers/: README.md  cloudflare-canary-playbook.md  wasm-hybrid-rollout-plan.md
scripts/: edge_worker_canary_archive_upload.sh  edge_worker_canary_audit_archive.sh  edge_worker_canary_drill.sh  edge_worker_canary_export_artifact.sh  edge_worker_chat_demo.sh  edge_worker_chat_repl.sh  edge_worker_hybrid_demo.sh
scripts/ci/: cloudflare_canary_check.sh  edge_wasm_spike_check.sh
src/: main.rs
src/agent/: dispatcher.rs
src/config/: mod.rs  schema.rs
src/memory/: backend.rs  cli.rs  http.rs  mod.rs  traits.rs
src/observability/: traits.rs
src/onboard/: wizard.rs
src/providers/: claude_code.rs  compatible.rs  openai_codex.rs  reliable.rs  router.rs  traits.rs
src/runtime/: mod.rs  traits.rs
src/tools/: capability_delegate.rs  mod.rs  traits.rs
src/tui/: gateway_client.rs  mod.rs
src/tui/tabs/: channels.rs  chat.rs  config.rs  dashboard.rs  logs.rs
tests/integration/: hybrid_http_memory.rs  hybrid_postgres_memory.rs  mod.rs  runtime_activation.rs
web/src/: App.tsx
web/src/pages/: Cron.tsx
