[package]
name = "zeroclaw-core"
version = "0.1.0"
edition = "2021"
description = "Core trait definitions and message types for the ZeroClaw agent runtime"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
tracing = { version = "0.1", default-features = false }

# Optional: streaming error types reference reqwest
reqwest = { version = "0.12", default-features = false, optional = true }

[features]
default = []
reqwest = ["dep:reqwest"]

[dev-dependencies]
parking_lot = "0.12"
tokio = { version = "1.50", features = ["macros", "rt"] }
