[package]
name = "zeroclaw-edge-worker"
version = "0.1.0"
edition = "2021"
description = "Cloudflare Worker runtime glue for zeroclaw-edge canary execution"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
zeroclaw-core = { path = "../zeroclaw-core" }
zeroclaw-edge = { path = "../zeroclaw-edge" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = "0.7.5"
