[package]
name = "zeroclaw-edge"
version = "0.1.0"
edition = "2021"
description = "Edge/worker viability spike for ZeroClaw hybrid runtime"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroclaw-core = { path = "../zeroclaw-core" }

[dev-dependencies]
tokio = { version = "1.50", features = ["macros", "rt"] }
